# rrpc

./: .gitignore  Cargo.toml  README.md  REAMDE.md  build_all.sh  doc.sh  fmt.sh  run_tests.sh  test.sh
client/src/: client.rs  lib.rs
example/: Cargo.toml  README.md  build.rs  input.txt
example/src/: client.rs  server.rs
old_tests/: clean_all.sh  run_tests.sh
old_tests/data/: test_1.txt
server/: Cargo.toml
server/src/: execution.rs  lib.rs  server.rs
shared/: Cargo.toml  test.sh
shared/src/: generate.rs  shared.rs  test.txt
shared/tests/: generate_tests.rs
shared/tests/data/expected/: test_1.gen.rs  test_2.gen.rs  test_3.gen.rs  test_4.gen.rs
shared/tests/data/inputs/: test_1.txt
src/: client.rs  lib.rs  rrpc.rs  server.rs  shared.rs
src/tests/: client_tests.rs  server_tests.rs
tests/: Cargo.toml  integration_tests.rs  run_test.sh  test.json  test_1.rrpc
tests/data/: test.json
tests/data/inputs/: test_2.txt  test_3.txt
tests/src/: main.rs
