workspace = { members = ["example"] }
[package]
name = "rrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rrpc"
path = "src/rrpc.rs"

[[bin]]
name = "client"
path = "src/client_gen.rs"

[[bin]]
name = "server"
path = "src/server_gen.rs"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
