[package]
name = "example"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"


[build-dependencies]
rrpc = { path = "../" } 

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
