[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { version = "0.1.0", path = "../client" }
serde = "1.0.199"
serde_json = "1.0.116"
server = { version = "0.1.0", path = "../server" }
shared = { version = "0.1.0", path = "../shared" }
